# Mini-Docker

./: .gitignore  AGENTS.md  AUTHORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  root-runtime.yml  tests.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI-COMMANDS.md  EXAMPLES.md  OVERVIEW.md  QUICKSTART.md  SECURITY-MODEL.md  TROUBLESHOOTING.md
examples/: Imagefile  README.md  demo.sh  networking.py  resource_limits.py  simple_container.py
mini_docker/: __init__.py  __main__.py  capabilities.py  cgroups.py  cli.py  container.py  daemon.py  filesystem.py  host.py  image_builder.py  logger.py  metadata.py  namespaces.py  network.py  oci.py  pod.py  seccomp.py  utils.py
oci-bundle/: config.json
rootfs/: instructions.txt
scripts/: runtime-smoke.sh  setup.sh
tests/: __init__.py  test_basic.py  test_container_restart.py  test_daemon_api.py  test_host.py  test_linux_runtime_integration.py  test_namespaces.py  test_network.py  test_runtime_hardening.py  test_runtime_logic.py  test_runtime_smoke_script.py
